--- a/style.css
+++ b/style.css
@@ -1,12 +1,43 @@
-div {
-    padding: 30px;
-    text-align: center;
-    margin-bottom: 10px;
-    color: #EEEEEE;
+h1 {
+  color: #f9faf8;
+  text-align: center;
+  font-size: 48px;
 }
 
+body{
+  background-color: #1f2937;
+  background-clip: border-box;
+}
 
+* {
+  margin: 2px;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-.title {
-    background-color: lightblue;
+.menu-container {
+  display: flex;
+}
+
+.menu{
+  display: flex;
+  flex: 1;
+  justify-content: space-around;
+}
+
+.date{
+  font-size: 24px;
+  color: #f9faf8;
+}
+
+.links{
+  display: flex;
+  justify-content: space-evenly;
+  color: #e5e7eb;
+  font-size: 18px;
+}
+
+.link2{
+  margin-left: 30px;
+  margin-right: 30px;
 }
