--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-h1 {
-  color: #f9faf8;
-  text-align: center;
-  font-size: 48px;
-}
-
 body{
   background-color: #1f2937;
   background-clip: border-box;
@@ -40,4 +34,82 @@ body{
 .link2{
   margin-left: 30px;
   margin-right: 30px;
+}
+
+.head{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+h1 {
+  color: #f9faf8;
+  text-align: center;
+  font-size: 48px;
+}
+
+.header-container {
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+}
+
+.header {
+  height: 300px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-grow: 1;
+}
+
+.text-con{
+  background-color: #e5e7eb;
+  width: auto;
+  height: 300px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  padding-left: 400px;
+  padding-right: 400px;
+}
+
+.by{
+  display: flex;
+  align-self: flex-end;
+}
+
+.leg{
+  color: #fff;
+  display: flex;
+  margin-top: 75px;
+  margin-bottom: 75px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 700px;
+  justify-content: center;
+  align-items: center;
+  border:solid #3882f6;
+  border-radius: 8px;
+  padding: 20px;
+  background-color: #3882f6;
+  text-align: justify;
+  text-shadow: 2px 2px 4px #000;
+}
+
+.btn{
+  color: #fff;
+  padding: 6px 22px;
+  border-radius: 6px;
+  background-color: #3882f6;
+  text-align: center;
+  border: 1px solid #fff;
+}
+
+.btn:hover {
+  background-color: #fff;
+  color: #000;
 }
