--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body{
-  background-color: #1f2937;
+  background-color: #fff;
   background-clip: border-box;
 }
 
 * {
-  margin: 2px;
+  margin: 0px;
   padding: 0;
   box-sizing: border-box;
 }
@@ -14,12 +14,15 @@ body{
 }
 
 .menu{
+  background-color: #1f2937;
   display: flex;
   flex: 1;
   justify-content: space-around;
+  padding: 20px;
+
 }
 
-.date{
+.logo{
   font-size: 24px;
   color: #f9faf8;
 }
@@ -36,15 +39,22 @@ body{
   margin-right: 30px;
 }
 
-.head{
+.head1{
+  color: #f9faf8;
+  background-color: #1f2937;
+  padding-top: 15px;
+  height: 350px;
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
+}
+
+.brain{
+  width: 370px;
+  padding: 10px;
+  margin-right: 50px;
 }
 
 h1 {
-  color: #f9faf8;
-  text-align: center;
   font-size: 48px;
 }
 
@@ -66,16 +76,20 @@ h1 {
 .text-con{
   background-color: #e5e7eb;
   width: auto;
-  height: 300px;
+  height: 450px;
   display:flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
-  padding-top: 100px;
-  padding-bottom: 100px;
-  padding-left: 400px;
-  padding-right: 400px;
 }
+
+.italic{
+  font-style: italic;
+  font-size: 36px;
+  width: 500px;
+  padding: 10px;
+  margin-right: 50px;
+}
+
 
 .by{
   display: flex;
@@ -89,15 +103,18 @@ h1 {
   margin-bottom: 75px;
   margin-left: auto;
   margin-right: auto;
-  width: 700px;
-  justify-content: center;
-  align-items: center;
+  width: 800px;
+  height: 100px;
   border:solid #3882f6;
   border-radius: 8px;
-  padding: 20px;
   background-color: #3882f6;
-  text-align: justify;
-  text-shadow: 2px 2px 4px #000;
+  padding: 30px;
+}
+
+.feet{
+  width: auto;
+  margin-right: 100px;
+  margin-left: 30px;
 }
 
 .btn{
@@ -112,4 +129,14 @@ h1 {
 .btn:hover {
   background-color: #fff;
   color: #000;
+}
+
+.end{
+  background-color: #1f2937;
+  color: #fff;
+  height: 60px;
+  font-family: "Lucida Console", "Courier New", monospace;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
