--- a/style.css
+++ b/style.css
@@ -60,17 +60,72 @@ h1 {
 
 .header-container {
   background-color: #fff;
+  height: 500px;
+  width: auto;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
-.header {
+.header1 {
+  width: 900px;
   height: 300px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
-  flex-grow: 1;
+}
+
+.title2{
+ text-align: center;
+ font-size: 36px;
+ color: #1f2937;
+ padding-top: 10px;
+ padding-bottom: 60px;
+} 
+
+.text1{
+  width: 200px;
+}
+
+.text2{
+  width: 200px;
+}
+
+.text3{
+  width: 200px;
+}
+
+.text4{
+  width: 200px;
+}
+
+.box1{
+  width: 200px;
+  height: 200px;
+  border: 3px solid #3882f6;
+  border-radius: 15px;
+}
+
+.box2{
+  width: 200px;
+  height: 200px;
+  border: 3px solid #3882f6;
+  border-radius: 15px;
+}
+
+.box3{
+  width: 200px;
+  height: 200px;
+  border: 3px solid #3882f6;
+  border-radius: 15px;
+}
+
+.box4{
+  width: 200px;
+  height: 200px;
+  border: 3px solid #3882f6;
+  border-radius: 15px;
 }
 
 .text-con{
@@ -87,13 +142,12 @@ h1 {
   font-size: 36px;
   width: 500px;
   padding: 10px;
-  margin-right: 50px;
 }
-
 
 .by{
   display: flex;
   align-self: flex-end;
+  padding-bottom: 75px;
 }
 
 .leg{
